tests/baselines/reference/twoAccessorsWithSameName(target=es5).errors.txt
twoAccessorsWithSameName.ts(2,9): error TS2300: Duplicate identifier 'x'.
twoAccessorsWithSameName.ts(3,9): error TS2300: Duplicate identifier 'x'.
twoAccessorsWithSameName.ts(7,9): error TS2300: Duplicate identifier 'x'.
twoAccessorsWithSameName.ts(8,9): error TS2300: Duplicate identifier 'x'.
twoAccessorsWithSameName.ts(19,9): error TS2300: Duplicate identifier 'x'.
twoAccessorsWithSameName.ts(24,9): error TS1118: An object literal cannot have multiple get/set accessors with the same name.
twoAccessorsWithSameName.ts(24,9): error TS2300: Duplicate identifier 'x'.


==== twoAccessorsWithSameName.ts (7 errors) ====
    class C {
        get x() { return 1; }
            ~
!!! error TS2300: Duplicate identifier 'x'.
        get x() { return 1; } // error
            ~
!!! error TS2300: Duplicate identifier 'x'.
    }
    
    class D {
        set x(v) {  }
            ~
!!! error TS2300: Duplicate identifier 'x'.
        set x(v) {  } // error
            ~
!!! error TS2300: Duplicate identifier 'x'.
    }
    
    class E {
        get x() {
            return 1;
        }
        set x(v) { }
    }
    
    var x = {
        get x() {
            ~
!!! error TS2300: Duplicate identifier 'x'.
            return 1;
        },
    
        // error
        get x() {
            ~
!!! error TS1118: An object literal cannot have multiple get/set accessors with the same name.
            ~
!!! error TS2300: Duplicate identifier 'x'.
            return 1;
        }
    }
    
    var y = {
        get x() {
            return 1;
        },
        set x(v) { }
    }